# quant-tech-advisor

./: .gitignore  CLAUDE.md  README.md  analyze_semi.py  daily_brief.py  deploy_advisor.py  preclose_brief.py  pyproject.toml  run.py
configs/: PARAMS-CHANGELOG.md  advisor.yaml  default.yaml  market_events.yaml  portfolio.example.yaml  trades.example.yaml
results/: code-review-2026-06-10.md
scripts/: evaluate_predictions.py  guru_control_group.py  install_daily_task.ps1  install_preclose_task.ps1  install_weekly_eval_task.ps1
src/: backtest.py  data.py  metrics.py  report.py  strategy.py
src/advisor/: __init__.py  ai_infra.py  config.py  daily_state.py  discord_push.py  events.py  factors.py  fetcher.py  guru_screens.py  holdings_watch.py  indicators.py  ips_monitor.py  ledger.py  levels.py  market_calendar.py  market_events.py  market_movers.py  news.py  portfolio_daily.py  portfolio_metrics.py  recommendations.py  regime.py  report.py  safeguards.py  scanner.py  scoring.py  universe.py  valuation.py  watchlist.py  weekly_theme.py
tests/: test_advisor_critical.py  test_backtest.py  test_strategy.py
