[project]
name = "quant-spy-ma"
version = "0.1.0"
description = "Minimal SMA crossover backtest on SPY"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "yfinance>=0.2.40",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "pyarrow>=14.0",
    # yfinance earnings_dates scrapes HTML via pandas.read_html -> needs lxml.
    # Without it every PEAD lookup silently returned empty (caught 2026-06-10).
    "lxml>=4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
