[project]
name = "quant-spy-ma"
version = "0.1.0"
description = "Minimal SMA crossover backtest on SPY"
requires-python = ">=3.10"
dependencies = [
    # pandas major versions change defaults (pct_change fill, dtypes) — stay
    # within 3.x deliberately.
    "pandas>=3.0,<4",
    "numpy>=1.24",
    # PINNED: yfinance field semantics drift across versions (debtToEquity
    # units, pegRatio availability were verified against exactly this
    # version on 2026-06-10). Upgrades are a deliberate quarterly action:
    # bump the pin, re-run pytest + a --no-discord smoke, then commit.
    "yfinance==1.3.0",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "pyarrow>=14.0",
    # yfinance earnings_dates scrapes HTML via pandas.read_html -> needs lxml.
    # Without it every PEAD lookup silently returned empty (caught 2026-06-10).
    "lxml>=4.9",
    # Windows has no system tz database — zoneinfo (market_calendar's ET
    # logic) depends on this package. Load-bearing, declare it explicitly.
    "tzdata",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
